--- a/frontend/src/views/article.ejs
+++ b/frontend/src/views/article.ejs
@@ -1,1 +1,47 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="import" href="/inlinePart/head.html?__inline"/>
+    <title>这是一篇文章</title>
+</head>
+<body>
+<link rel="import" href="/inlinePart/bodyHeader.html?__inline"/>
+
+
+<div class="ui grid container mainArea">
+
+    <div class="ui main text container twelve wide column">
+        <h1 class="ui header">这是一篇文章</h1>
+        <p>这是分类</p>
+        <p>这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉</p>
+    </div>
+
+    <!-- 左边栏 -->
+    <div class="four wide column" ms-controller="infoModel">
+
+        <!-- 文章分类 -->
+        <div class="articleLabel tab">
+            <h3>分类</h3>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+            <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
+        </div>
+
+        <!-- 关于我 -->
+        <div class="masterInfo tab">
+            <h3>关于我</h3>
+            <img class="ui circular image masterHead" ms-click="shockHead" src="http://semantic-ui.com/images/avatar2/large/elyse.png" />
+            <p>前端攻城狮+nodejs程序猿</p>
+            <p><a href="http://weibo.com/u/2645818343">微博</a>,<a href="https://github.com/iamllitog">Github</a></p>
+        </div>
+    </div>
+</div>
+
+
+<link rel="import" href="/inlinePart/bodyFooter.html?__inline"/>
+<script src="/internalM/article/article.js"></script>
+</body>
+</html>
