--- a/frontend/src/views/index.ejs
+++ b/frontend/src/views/index.ejs
@@ -28,7 +28,7 @@
                         <img src="http://semantic-ui.com/images/wireframe/image.png">
                     </div>
                     <div class="content">
-                        <a class="header" href="/article/123">Header</a>
+                        <a class="header" href="/article/gaga/123">Header</a>
                         <div class="meta">
                             <span>Description</span>
                         </div>
@@ -45,7 +45,7 @@
                         <img src="http://semantic-ui.com/images/wireframe/image.png">
                     </div>
                     <div class="content">
-                        <a class="header" href="/article/456">Header</a>
+                        <a class="header" href="/article/dada/456">Header</a>
                         <div class="meta">
                             <span>Description</span>
                         </div>
@@ -91,9 +91,9 @@
         <!-- 左边栏 -->
         <div class="four wide column" ms-controller="infoModel">
 
-            <!-- 文章标签 -->
+            <!-- 文章分类 -->
             <div class="articleLabel tab">
-                <h3>标签</h3>
+                <h3>分类</h3>
                 <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
                 <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
                 <p><a href="http://weibo.com/u/2645818343">标签1</a></p>
