--- a/frontend/src/views/admin.ejs
+++ b/frontend/src/views/admin.ejs
@@ -146,10 +146,202 @@
             <!-- 数据查看-->
             <div class="ui basic segment" ms-if="currentTab == 'data'">
                 <h3 class="ui header">数据查看</h3>
+                <h4>站点统计</h4>
+                <div class="ui three statistics">
+                    <div class="red statistic">
+                        <div class="value">2,204 </div>
+                        <div class="label">浏览次数 </div>
+                    </div>
+                    <div class="orange statistic">
+                        <div class="value">2,204 </div>
+                        <div class="label">用户人数 </div>
+                    </div>
+                    <div class="yellow statistic">
+                        <div class="value">2,204 </div>
+                        <div class="label">评论次数 </div>
+                    </div>
+                </div>
+
+                <h4>文章统计</h4>
+                <div class="ui accordion">
+                    <div class="title"><i class="dropdown icon"></i>标签1 </div>
+                    <div class="content">
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="title"><i class="dropdown icon"></i>标签1 </div>
+                    <div class="content">
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="title"><i class="dropdown icon"></i>标签1 </div>
+                    <div class="content">
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="title"><i class="dropdown icon"></i>标签1 </div>
+                    <div class="content">
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                        <p class="transition hidden">文章a</p>
+                        <div class="ui two statistics">
+                            <div class="olive statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">浏览次数 </div>
+                            </div>
+                            <div class="blue statistic">
+                                <div class="value">2,204 </div>
+                                <div class="label">评论次数 </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
             <!-- 评论管理-->
             <div class="ui basic segment" ms-if="currentTab == 'comment'">
                 <h3 class="ui header">评论管理</h3>
+                <div class="ui form">
+                    <div class="fields">
+                        <div class="field">
+                            <label>关键字搜索</label>
+                            <input placeholder="Keyword" type="text">
+                        </div>
+                        <div class="field">
+                            <label>分类搜索</label>
+                            <select class="ui dropdown">
+                                <option value="">subject</option>
+                                <option value="1">分类1</option>
+                                <option value="2">分类2</option>
+                                <option value="3">分类3</option>
+                                <option value="4">分类4</option>
+                            </select>
+                        </div>
+                        <div class="field">
+                            <label>&nbsp;</label>
+                            <div class="ui buttons">
+                                <button class="ui green button">搜索</button>
+                                <div class="or"></div>
+                                <button class="ui blue button" ms-click="newBlog">写新blog</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- 我的信息管理-->
             <div class="ui basic segment" ms-if="currentTab == 'master'">
