--- a/frontend/src/views/admin.ejs
+++ b/frontend/src/views/admin.ejs
@@ -142,9 +142,10 @@
                         </div>
                     </div>
                 </div>
+
             </div>
             <!-- 数据查看-->
-            <div class="ui basic segment" ms-if="currentTab == 'data'">
+            <div class="ui basic segment" ms-if="currentTab == 'data'"  ms-controller="dataModal">
                 <h3 class="ui header">数据查看</h3>
                 <h4>站点统计</h4>
                 <div class="ui three statistics">
@@ -309,37 +310,128 @@
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
+
             <!-- 评论管理-->
-            <div class="ui basic segment" ms-if="currentTab == 'comment'">
-                <h3 class="ui header">评论管理</h3>
-                <div class="ui form">
-                    <div class="fields">
-                        <div class="field">
-                            <label>关键字搜索</label>
-                            <input placeholder="Keyword" type="text">
-                        </div>
-                        <div class="field">
-                            <label>分类搜索</label>
-                            <select class="ui dropdown">
-                                <option value="">subject</option>
-                                <option value="1">分类1</option>
-                                <option value="2">分类2</option>
-                                <option value="3">分类3</option>
-                                <option value="4">分类4</option>
-                            </select>
-                        </div>
-                        <div class="field">
-                            <label>&nbsp;</label>
-                            <div class="ui buttons">
-                                <button class="ui green button">搜索</button>
-                                <div class="or"></div>
-                                <button class="ui blue button" ms-click="newBlog">写新blog</button>
+            <div class="ui basic segment commentModal" ms-if="currentTab == 'comment'"  ms-controller="commentModal">
+                <div class="articleList" ms-visible="isArticleList">
+                    <h3 class="ui header">评论管理</h3>
+                    <div class="ui form">
+                        <div class="fields">
+                            <div class="field">
+                                <label>分类搜索</label>
+                                <select class="ui dropdown">
+                                    <option value="">subject</option>
+                                    <option value="1">分类1</option>
+                                    <option value="2">分类2</option>
+                                    <option value="3">分类3</option>
+                                    <option value="4">分类4</option>
+                                </select>
                             </div>
                         </div>
+                    </div>
+                    <div class="ui items">
+                        <div class="item">
+                            <div class="content">
+                                <div class="header">12 Years a Slave</div>
+                                <div class="description">
+                                    <button class="ui blue button" ms-click="changeToComment">管理评论</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- 分页菜单 -->
+                    <div class="page">
+                        <div class="ui pagination menu">
+                            <a class="icon item">
+                                <i class="left arrow icon"></i>
+                            </a>
+                            <a class="active item">
+                                1
+                            </a>
+                            <a class="item">
+                                2
+                            </a>
+                            <a class="item">
+                                3
+                            </a>
+                            <a class="item">
+                                4
+                            </a>
+                            <a class="item">
+                                5
+                            </a>
+                            <a class="icon item">
+                                <i class="right arrow icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="commentArea" ms-visible="!isArticleList">
+                    <button class="ui left labeled icon button" ms-click="changeToArticle"><i class="left arrow icon"></i> 取消评论 </button>
+                    <div class="ui comments">
+                        <h3 class="ui dividing header">Comments</h3>
+                        <div class="comment">
+                            <div class="content">
+                                <a class="author">Matt</a>
+                                <div class="metadata">
+                                    <span class="date">今天下午 5:42</span>
+                                </div>
+                                <div class="text">太赞了！ </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <div class="content">
+                                <a class="author">Elliot Fu</a>
+                                <div class="metadata">
+                                    <span class="date">昨天上午12:30</span>
+                                </div>
+                                <div class="text">
+                                    <p>This has been very useful for my research. Thanks as well!</p>
+                                </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                            <div class="comments">
+                                <div class="comment">
+                                    <div class="content">
+                                        <a class="author">Jenny Hess</a>
+                                        <div class="metadata">
+                                            <span class="date">刚刚</span>
+                                        </div>
+                                        <div class="text">Elliot you are always so right :) </div>
+                                        <div class="actions">
+                                            <a class="reply">Reply</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="comment">
+                            <div class="content">
+                                <a class="author">Joe Henderson</a>
+                                <div class="metadata">
+                                    <span class="date">5 天以前</span>
+                                </div>
+                                <div class="text">老兄，这太棒了。非常感谢。 </div>
+                                <div class="actions">
+                                    <a class="reply">Reply</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ui horizontal divider">New Comment </div>
+                        <form class="ui reply form">
+                            <div class="field">
+                                <textarea></textarea>
+                            </div>
+                            <div class="ui blue labeled submit icon button"><i class="icon edit"></i> Add Reply </div>
+                        </form>
                     </div>
                 </div>
             </div>
