--- a/frontend/src/views/article.ejs
+++ b/frontend/src/views/article.ejs
@@ -10,10 +10,72 @@
 
 <div class="ui grid container mainArea">
 
-    <div class="ui main text container twelve wide column">
+    <div class="ui main container twelve wide column piled segment">
         <h1 class="ui header">这是一篇文章</h1>
         <p>这是分类</p>
         <p>这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉这是文章主体巴拉巴拉</p>
+        <div class="ui comments">
+            <h3 class="ui dividing header">Comments</h3>
+            <div class="comment">
+                <div class="content">
+                    <a class="author">Matt</a>
+                    <div class="metadata">
+                        <span class="date">今天下午 5:42</span>
+                    </div>
+                    <div class="text">太赞了！ </div>
+                    <div class="actions">
+                        <a class="reply">Reply</a>
+                    </div>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="content">
+                    <a class="author">Elliot Fu</a>
+                    <div class="metadata">
+                        <span class="date">昨天上午12:30</span>
+                    </div>
+                    <div class="text">
+                        <p>This has been very useful for my research. Thanks as well!</p>
+                    </div>
+                    <div class="actions">
+                        <a class="reply">Reply</a>
+                    </div>
+                </div>
+                <div class="comments">
+                    <div class="comment">
+                        <div class="content">
+                            <a class="author">Jenny Hess</a>
+                            <div class="metadata">
+                                <span class="date">刚刚</span>
+                            </div>
+                            <div class="text">Elliot you are always so right :) </div>
+                            <div class="actions">
+                                <a class="reply">Reply</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="content">
+                    <a class="author">Joe Henderson</a>
+                    <div class="metadata">
+                        <span class="date">5 天以前</span>
+                    </div>
+                    <div class="text">老兄，这太棒了。非常感谢。 </div>
+                    <div class="actions">
+                        <a class="reply">Reply</a>
+                    </div>
+                </div>
+            </div>
+            <div class="ui horizontal divider">New Comment </div>
+            <form class="ui reply form">
+                <div class="field">
+                    <textarea></textarea>
+                </div>
+                <div class="ui blue labeled submit icon button"><i class="icon edit"></i> Add Reply </div>
+            </form>
+        </div>
     </div>
 
     <!-- 左边栏 -->
