--- a/frontend/src/views/admin.ejs
+++ b/frontend/src/views/admin.ejs
@@ -39,10 +39,8 @@
                                 <label>分类搜索</label>
                                 <select class="ui dropdown">
                                     <option value="">subject</option>
-                                    <option value="1">分类1</option>
-                                    <option value="2">分类2</option>
-                                    <option value="3">分类3</option>
-                                    <option value="4">分类4</option>
+                                    <option value="all">全部</option>
+                                    <option value="all">全部</option>
                                 </select>
                             </div>
                             <div class="field">
@@ -104,6 +102,13 @@
                     <textarea id="editor" placeholder="文章内容" autofocus></textarea>
                     <div class="ctrlArea">
                         <div class="ui form">
+                            <div class="field">
+                                <label>标题</label>
+                                <input type="text">
+                            </div>
+                            <div class="field">
+                                <img id="articleCropImg" src="http://semantic-ui.com/images/wireframe/image.png">
+                            </div>
                             <div class="inline fields editSubjectgroup">
                                 <div class="field ">
                                     <label>设置分类:</label>
